NetworkPolicie/NP-petclinic-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-petclinic-app-to-petclinic-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: petclinic-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: petclinic-app
      ports:
        - protocol: TCP
          port: 5432
